<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="14dp">

    <TextView
        android:id="@+id/position_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/organization_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organization"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@+id/position_text_view"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@+id/organization_text_view"
        app:layout_constraintStart_toStartOf="@+id/organization_text_view"/>



</androidx.constraintlayout.widget.ConstraintLayout>
