<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AboutFragment"
    android:background="?attr/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:paddingBottom="18dp">

        <TextView
            android:id="@+id/skills_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/skills"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/skills_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/skills_text_view"
            app:layout_constraintStart_toStartOf="@+id/skills_text_view"
            tools:itemCount="3"
            tools:listitem="@layout/item_skills_recycler"
            />

        <TextView
            android:id="@+id/experience_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/experience"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/skills_recycler_view"
            app:layout_constraintStart_toStartOf="@+id/skills_recycler_view"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/experience_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/experience_label"
            app:layout_constraintStart_toStartOf="@+id/experience_label"
            tools:itemCount="2"
            tools:listitem="@layout/item_experience_recycler" />


        <TextView
            android:id="@+id/internships_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/internships"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            android:layout_marginBottom="38dp"
            app:layout_constraintTop_toBottomOf="@+id/experience_recycler_view"
            app:layout_constraintStart_toStartOf="@+id/experience_recycler_view"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/internships_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/internships_label"
            app:layout_constraintStart_toStartOf="@+id/internships_label"
            tools:itemCount="2"
            tools:listitem="@layout/item_intenships_recycler" />


        <TextView
            android:id="@+id/education_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/education"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            android:layout_marginBottom="38dp"
            app:layout_constraintTop_toBottomOf="@+id/internships_recycler_view"
            app:layout_constraintStart_toStartOf="@+id/internships_recycler_view"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/education_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/education_label"
            app:layout_constraintStart_toStartOf="@+id/education_label"
            tools:itemCount="1"
            tools:listitem="@layout/item_education_recycler" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>