<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProjectsFragment"
    android:background="?attr/backgroundColor">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:clipToPadding="false"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/projects_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="44dp"
            android:text="@string/projects"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="12dp"
            android:layout_marginHorizontal="24dp"
            android:background="?attr/cardBackgroundColor"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@+id/projects_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                app:layout_constraintTop_toBottomOf="@+id/projects_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_more_app"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_semibold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <LinearLayout
                    android:id="@+id/layout_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/text_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:src="@drawable/do_more_1"/>


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:src="@drawable/do_more_2"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/app1_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/do_more_app_info"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium"
                    app:layout_constraintTop_toBottomOf="@+id/layout_1"
                    app:layout_constraintStart_toStartOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="12dp"
            android:layout_marginHorizontal="24dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@+id/card_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:visibility="visible"
                android:id="@+id/constraint_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                app:layout_constraintTop_toBottomOf="@+id/constraint_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy_edu"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_semibold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <LinearLayout
                    android:id="@+id/layout_2"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_margin="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/text_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:src="@drawable/easy_edu_1"/>


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:src="@drawable/easy_edu_2"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/app2_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/easy_edu_info"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_2"
                    app:layout_constraintStart_toStartOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.cardview.widget.CardView>






    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>